--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "feng-shui",
   "private": true,
+  "homepage": "https://guanwei514.github.io/feng-shui",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,7 +9,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
