--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "feng-shui",
   "private": true,
-  "homepage": "https://guanwei514.github.io/feng-shui",
-  "version": "0.0.0",
+  "homepage": "https://guanwei514.github.io/feng-shui/",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "start": "vite",
@@ -10,6 +10,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
